--- a/home/wiki/App/Bookmarks.html
+++ b/home/wiki/App/Bookmarks.html
@@ -148,7 +148,7 @@
       <span class="mw-headline" id="Old_bookmarks">Old bookmarks</span>
     </h2>
     <p>
-      As of v2.7.3, XOWA now has a <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_3" title="Special:XowaBookmarks" class="xowa-visited">new Bookmarks page</a>. All links will go to the new bookmarks page.
+      As of v2.7.3, XOWA now has a <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_3" title="Special:XowaBookmarks">new Bookmarks page</a>. All links will go to the new bookmarks page.
     </p>
     <p>
       If you would like to review old bookmarks, you can still reach them at <a href="http://xowa.org/home/wiki/Data:Bookmarks.html" id="xolnki_4" title="Data:Bookmarks">this link</a>
