--- a/home/wiki/App/Category.html
+++ b/home/wiki/App/Category.html
@@ -24,7 +24,7 @@
       An overview follows below.
     </p>
     <p>
-      For more information about V2 setup see <a href="http://xowa.org/home/wiki/App/Category/Building.html" id="xolnki_2" title="App/Category/Building" class="xowa-visited">App/Category/Building</a>
+      For more information about V2 setup see <a href="http://xowa.org/home/wiki/App/Category/Building.html" id="xolnki_2" title="App/Category/Building">App/Category/Building</a>
     </p>
     <p>
       For more information about V2 internals see <a href="http://xowa.org/home/wiki/App/Category/Internals.html" id="xolnki_3" title="App/Category/Internals">App/Category/Internals</a>
