--- a/home/wiki/App/Search.html
+++ b/home/wiki/App/Search.html
@@ -5,7 +5,7 @@
   <title>App/Search - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.795fe7fdd8050f2666de60f0d450b2a1">
 .symbol-col {
     text-align:center;
   }
@@ -30,7 +30,7 @@
     font-weight: bold;
   }
 </style>
-<style>
+<style data-id="xowa_html.144559d0c4d74087379430fdc533531b">
 .symbol-col {
     text-align:center;
   }
