--- a/home/wiki/App/Search/Address_bar.html
+++ b/home/wiki/App/Search/Address_bar.html
@@ -70,7 +70,7 @@
       <span class="mw-headline" id="Auto-complete">Auto-complete</span>
     </h2>
     <p>
-      As of v3.3.4.1, the address bar supports auto-completion. This function can only be used with a wiki built in v3.3.4.1 or later. If the address bar is not working, you should rebuild the search-databases. See <a href="http://xowa.org/home/wiki/App/Search/Build.html" id="xolnki_2" title="App/Search/Build" class="xowa-visited">App/Search/Build</a> for more information.
+      As of v3.3.4.1, the address bar supports auto-completion. This function can only be used with a wiki built in v3.3.4.1 or later. If the address bar is not working, you should rebuild the search-databases. See <a href="http://xowa.org/home/wiki/App/Search/Build.html" id="xolnki_2" title="App/Search/Build">App/Search/Build</a> for more information.
     </p>
     <h2>
       <span class="mw-headline" id="Basic_details">Basic details</span>
@@ -114,7 +114,7 @@
     </h3>
     <ul>
       <li>
-        <b>Searches sort by page score</b>: By convention, XOWA scores every page with percentile ranking ("graded curve") from 0 to 1,000,000. Page score is based on <a href="https://en.wikipedia.org/wiki/PageRank" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/PageRank</a> . In short, a page has a high page score if there are many pages linking to it. For more info, see <a href="http://xowa.org/home/wiki/App/Search/Score.html" id="xolnki_5" title="App/Search/Score" class="xowa-visited">App/Search/Score</a>
+        <b>Searches sort by page score</b>: By convention, XOWA scores every page with percentile ranking ("graded curve") from 0 to 1,000,000. Page score is based on <a href="https://en.wikipedia.org/wiki/PageRank" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/PageRank</a> . In short, a page has a high page score if there are many pages linking to it. For more info, see <a href="http://xowa.org/home/wiki/App/Search/Score.html" id="xolnki_5" title="App/Search/Score">App/Search/Score</a>
       </li>
       <li>
         <b>Searches find a page that matches the text and list it as the first result</b>: For example, searching for "earth" will automatically find the page "Earth" and list it as the first result, regardless of its score. (Technically, this entry is assigned a temporary score of 3,000,000)
