--- a/home/wiki/App/Xtn/Mediawiki/Math/Setup.html
+++ b/home/wiki/App/Xtn/Mediawiki/Math/Setup.html
@@ -67,7 +67,7 @@
         <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/Latex/Windows.html" id="xolnki_2" title="App/Xtn/Mediawiki/Math/Latex/Windows">Set up math (Windows)</a>
       </dd>
       <dd>
-        <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/Latex/Linux.html" id="xolnki_3" title="App/Xtn/Mediawiki/Math/Latex/Linux" class="xowa-visited">Set up math (Linux)</a>
+        <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/Latex/Linux.html" id="xolnki_3" title="App/Xtn/Mediawiki/Math/Latex/Linux">Set up math (Linux)</a>
       </dd>
       <dd>
         <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/Latex/Mac_OS_X.html" id="xolnki_4" title="App/Xtn/Mediawiki/Math/Latex/Mac OS X">Set up math (Mac OS X)</a>
@@ -104,7 +104,7 @@
     </h2>
     <ul>
       <li>
-        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_6" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a>
+        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_6" title="Diagnostics/Math">Diagnostics/Math</a>
       </li>
     </ul>
     <h2>
