--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -786,7 +786,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Search/Address_bar.html" id="xolnki_9" title="App/Search/Address bar" class="xowa-visited">App/Search/Address_bar</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Search/Address_bar.html" id="xolnki_9" title="App/Search/Address bar">App/Search/Address_bar</a>
       </dd>
     </dl>
     <ul>
@@ -1053,7 +1053,7 @@
         Core: Parse decimals using US locale, not user locale. Resolves extremely wide pie charts on many de.w pages. {detected by markusmaresch} See: <a href="https://de.wikipedia.org/wiki/Hausmannstätten" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Hausmannstätten</a>
       </li>
       <li>
-        Xtn.Pgbnr: Add {{PAGEBANNER}} extension. Resolves pagebanner not showing up on top of wikivoyage pages. See: <a href="https://en.wikivoyage.org/wiki/Stonehenge" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Stonehenge</a> <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a> <a href="https://en.wikivoyage.org/wiki/Munich" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Munich</a> <a href="https://en.wikivoyage.org/wiki/Cumbernauld" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Cumbernauld</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_12" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
+        Xtn.Pgbnr: Add {{PAGEBANNER}} extension. Resolves pagebanner not showing up on top of wikivoyage pages. See: <a href="https://en.wikivoyage.org/wiki/Stonehenge" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Stonehenge</a> <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a> <a href="https://en.wikivoyage.org/wiki/Munich" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Munich</a> <a href="https://en.wikivoyage.org/wiki/Cumbernauld" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Cumbernauld</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_12" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
