--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -18,7 +18,7 @@
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
     <p>
-      <b>Overview</b>: This is a list of <b>827</b> <sup id="cite_ref-update_date_0-0" class="reference"><a href="#cite_note-update_date-0">[1]</a></sup>data dumps compiled from <a href="http://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">http://dumps.wikimedia.org/backup-index.html</a> If you are looking for a specific wiki, please use the <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_2" title="App/UI/Find box" class="xowa-visited">App/UI/Find box</a> or use the sortable columns.
+      <b>Overview</b>: This is a list of <b>827</b> <sup id="cite_ref-update_date_0-0" class="reference"><a href="#cite_note-update_date-0">[1]</a></sup>data dumps compiled from <a href="http://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">http://dumps.wikimedia.org/backup-index.html</a> If you are looking for a specific wiki, please use the <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_2" title="App/UI/Find box">App/UI/Find box</a> or use the sortable columns.
     </p>
     <p>
       <b>Internet access needed</b>: You will need internet access to use this page. If you don't have internet access but you've already downloaded a dump file, see <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_3" title="App/Import/Offline">App/Import/Offline</a>
@@ -33,7 +33,7 @@
       <b>Options</b>: If you want to configure options related to the data dump import, see <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_6" title="Options/Import" class="xowa-visited">Options/Import</a>
     </p>
     <p>
-      <b>Removal</b>: If you want to remove a wiki, see <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_7" title="App/Import/Removal" class="xowa-visited">App/Import/Removal</a>
+      <b>Removal</b>: If you want to remove a wiki, see <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_7" title="App/Import/Removal">App/Import/Removal</a>
     </p>
     <table class='wikitable sortable'>
       <tr>
