--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -5,7 +5,7 @@
   <title>Dashboard/Wiki maintenance - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,10 +17,10 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.9612145b9f324235748be299d26cd5e2">
 .cell_center {text-align:center;}
 </style>
-<style>
+<style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -32,7 +32,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.9612145b9f324235748be299d26cd5e2">
 .cell_center {text-align:center;}
 </style>
 
@@ -645,10 +645,10 @@
           en.wikivoyage.org
         </td>
         <td class='cell_center'>
-          n
+          y
         </td>
         <td class='cell_center'>
-          2016-04-07
+          2016-01-12
         </td>
         <td class='cell_center'>
           2016-03-05
@@ -997,7 +997,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-04-07
+          2016-03-05
         </td>
         <td class='cell_center'>
           2016-03-05
