--- a/home/wiki/Help/Features/Search/Build.html
+++ b/home/wiki/Help/Features/Search/Build.html
@@ -62,17 +62,17 @@
       <span class="mw-headline" id="Overview">Overview</span>
     </h2>
     <p>
-      As of v3.3.3.1, XOWA has a new search engine. This uses the same search functionality that is in XOWA Android.
+      As of v3.3.4.1, XOWA has a new search engine. This uses the same search functionality that is in XOWA Android.
     </p>
     <p>
       Unfortunately, this search engine is not backward compatible with old wikis. To use it, you must do one of the following:
     </p>
     <ul>
       <li>
-        Import a new wiki with v3.3.3.1. The new search-databases are built automatically.
+        Import a new wiki with v3.3.4.1. The new search-databases are built automatically.
       </li>
       <li>
-        Upgrade an existing wiki with v3.3.3.1. You can upgrade with the following process 
+        Upgrade an existing wiki with v3.3.4.1. You can upgrade with the following process 
         <ul>
           <li>
             Go to <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_2" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a>
@@ -112,7 +112,7 @@
         XOWA then parses this data and calculates <a href="https://en.wikipedia.org/wiki/PageRank" rel="nofollow" class="external text">PageRank</a> based on which page links to which page
       </li>
       <li>
-        XOWA then applies a series of calculations to come up with a page score for each page. For more info, see <a href="http://xowa.org/home/wiki/Help/Features/Search/Score.html" id="xolnki_3" title="Help/Features/Search/Score" class="xowa-visited">Help/Features/Search/Score</a>
+        XOWA then applies a series of calculations to come up with a page score for each page. For more info, see <a href="http://xowa.org/home/wiki/Help/Features/Search/Score.html" id="xolnki_3" title="Help/Features/Search/Score">Help/Features/Search/Score</a>
       </li>
     </ul>
     <p>
