--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -5,7 +5,7 @@
   <title>Options - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,7 +17,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -108,14 +108,14 @@ li.active a, li.active a:hover
     min-height: 300px;
 }
 </style>
-<style>
+<style data-id="xowa_html.b394ccc80246a04a003f29c1c3b2c21c">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
   ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
   .bold      {font-weight: 900;}
 </style>
-<style>
+<style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -127,7 +127,7 @@ li.active a, li.active a:hover
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -218,7 +218,7 @@ li.active a, li.active a:hover
     min-height: 300px;
 }
 </style>
-<style>
+<style data-id="xowa_html.b394ccc80246a04a003f29c1c3b2c21c">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
@@ -322,7 +322,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window" class="xowa-visited">Window</a>
+              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window">Window</a>
             </td>
             <td>
               Window Font and Startup position
@@ -375,7 +375,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_8" title="Options/Menus" class="xowa-visited">Menus</a>
+              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_8" title="Options/Menus">Menus</a>
             </td>
             <td>
               Change the menu bar or right-click menu
@@ -412,7 +412,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_12" title="Options/Category" class="xowa-visited">Category</a>
+              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_12" title="Options/Category">Category</a>
             </td>
             <td>
               Category options
