--- a/home/wiki/Options/Wiki_HTML.html
+++ b/home/wiki/Options/Wiki_HTML.html
@@ -5,7 +5,7 @@
   <title>Options/Wiki HTML - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,7 +17,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -108,7 +108,7 @@ li.active a, li.active a:hover
     min-height: 300px;
 }
 </style>
-<style>
+<style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -120,7 +120,7 @@ li.active a, li.active a:hover
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -504,7 +504,7 @@ li.active a, li.active a:hover
             </ul><span class="reference-text">Saving the hide/show setting on a page by page basis will be supported in a future version, but probably not anytime soon.</span>
           </li>
           <li id="cite_note-collapsible_toc-6">
-            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_toc_6-0">^</a></span> <span class="reference-text">All table of contents have a Show / Hide link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_2" title="Diagnostics/Javascript/Table of contents" class="xowa-visited">Diagnostics/Javascript/Table_of_contents</a><br>
+            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_toc_6-0">^</a></span> <span class="reference-text">All table of contents have a Show / Hide link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_2" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a><br>
             Choose one of the following (default is <code>unchecked</code>)</span>
             <ul>
               <li>
@@ -516,7 +516,7 @@ li.active a, li.active a:hover
             </ul>
           </li>
           <li id="cite_note-collapsible_table-7">
-            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_table_7-0">^</a></span> <span class="reference-text">Navigation boxes at the bottom of the article will often have a Collapse / Expand link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_3" title="Diagnostics/Javascript/Collapsible" class="xowa-visited">Diagnostics/Javascript/Collapsible</a> or <a href="http://en.wikipedia.org/wiki/Quantum_mechanics" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Quantum_mechanics</a><br>
+            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_table_7-0">^</a></span> <span class="reference-text">Navigation boxes at the bottom of the article will often have a Collapse / Expand link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_3" title="Diagnostics/Javascript/Collapsible">Diagnostics/Javascript/Collapsible</a> or <a href="http://en.wikipedia.org/wiki/Quantum_mechanics" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Quantum_mechanics</a><br>
              Choose one of the following. (default is <code>unchecked</code>)</span>
             <ul>
               <li>
