--- a/home/wiki/App/Basics/Files.html
+++ b/home/wiki/App/Basics/Files.html
@@ -5,14 +5,14 @@
   <title>App/Basics/Files - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.b394ccc80246a04a003f29c1c3b2c21c">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
   ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
   .bold      {font-weight: 900;}
 </style>
-<style>
+<style data-id="xowa_html.b394ccc80246a04a003f29c1c3b2c21c">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
@@ -169,10 +169,10 @@
     </p>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Dev/File/Setup/Windows.html" id="xolnki_5" title="Dev/File/Setup/Windows" class="xowa-visited">Set up images (Windows)</a>
+        <a href="http://xowa.org/home/wiki/Dev/File/Setup/Windows.html" id="xolnki_5" title="Dev/File/Setup/Windows">Set up images (Windows)</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Dev/File/Setup/Linux.html" id="xolnki_6" title="Dev/File/Setup/Linux" class="xowa-visited">Set up images (Linux)</a>
+        <a href="http://xowa.org/home/wiki/Dev/File/Setup/Linux.html" id="xolnki_6" title="Dev/File/Setup/Linux">Set up images (Linux)</a>
       </li>
       <li>
         <a href="http://xowa.org/home/wiki/Dev/File/Setup/Mac_OS_X.html" id="xolnki_7" title="Dev/File/Setup/Mac OS X">Set up images (Mac OS X)</a>
