--- a/home/wiki/App/UI/Menus.html
+++ b/home/wiki/App/UI/Menus.html
@@ -29,7 +29,7 @@
       </li>
     </ul>
     <p>
-      These menus can also be customized using the source at <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_2" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+      These menus can also be customized using the source at <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_2" title="Options/Menus">Options/Menus</a>
     </p>
     <p>
       Note that internationalization (translation by language) is only supported for German. Other languages can be supported, but translations are needed! See <a href="http://xowa.org/home/wiki/Help/Feedback.html" id="xolnki_3" title="Help/Feedback" class="xowa-visited">Help/Feedback</a>.
