--- a/home/wiki/App/UI/Printing.html
+++ b/home/wiki/App/UI/Printing.html
@@ -5,14 +5,14 @@
   <title>App/UI/Printing - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.b394ccc80246a04a003f29c1c3b2c21c">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
   ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
   .bold      {font-weight: 900;}
 </style>
-<style>
+<style data-id="xowa_html.b394ccc80246a04a003f29c1c3b2c21c">
 .console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
   .code
   ,.path
@@ -94,7 +94,7 @@
         Restart XOWA
       </li>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_2" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        Go to <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_2" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
         Add the following line: <span class="code">add_btn_default('xowa.file.print');</span>
