--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -358,7 +358,7 @@
         (change) Import: Missing category files should not fail import with message "An import is still in progress" {detected by Anselm}.
       </li>
       <li>
-        (add) Import: Added command-line download cmd; EX:add ('simple.wikipedia.org' , 'file.download') {dump_type = 'pages-articles'}. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Script.html" id="xolnki_3" title="Dev/Command-line/Script" class="xowa-visited">Dev/Command-line/Script</a>
+        (add) Import: Added command-line download cmd; EX:add ('simple.wikipedia.org' , 'file.download') {dump_type = 'pages-articles'}. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Script.html" id="xolnki_3" title="Dev/Command-line/Script">Dev/Command-line/Script</a>
       </li>
       <li>
         (change) Viewers: Removed "--no-loop" default from VLC viewer app.
@@ -871,7 +871,7 @@
         (fix) [broken since:v0.9.3] Gallery: Gallery items with no caption would cause page to fail; EX:&lt;gallery&gt;File:A.png&lt;/gallery&gt; {detected by Schnark}. See: <a href="http://de.wikipedia.org/wiki/Lewis_Carroll" rel="nofollow" class="external free">http://de.wikipedia.org/wiki/Lewis_Carroll</a>
       </li>
       <li>
-        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window" class="xowa-visited">Options/Window</a>
+        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window">Options/Window</a>
       </li>
       <li>
         (file) [broken since:v0.9.3] Import: Search version2 fails if explicitly added to normal import (which uses search version2 by default).
@@ -1099,7 +1099,7 @@
     </p>
     <ul>
       <li>
-        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
         (add) Addon: Addon can automatically redirect http: to xowa: when offline {contributed by treck}.
@@ -1268,7 +1268,7 @@
         (add) Options: Reorganized options pages.
       </li>
       <li>
-        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category" class="xowa-visited">Options/Category</a>
+        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category">Options/Category</a>
       </li>
       <li>
         (add) Wikidata: Internationalization for Wikidata JSON formatter {contributed by Schnark}.
