--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -424,7 +424,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Add better messages for JTidy diagnostics. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_3" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a> <a href="http://xowa.org/home/wiki/Diagnostics/JTidy.html" id="xolnki_4" title="Diagnostics/JTidy" class="xowa-visited">Diagnostics/JTidy</a>
+        Diagnostics: Add better messages for JTidy diagnostics. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_3" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a> <a href="http://xowa.org/home/wiki/Diagnostics/JTidy.html" id="xolnki_4" title="Diagnostics/JTidy" class="xowa-visited">Diagnostics/JTidy</a>
       </li>
     </ul>
     <p>
@@ -549,7 +549,7 @@
     </p>
     <ul>
       <li>
-        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -557,7 +557,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Fix broken diagnostic for Wikivoyage. See: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_6" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
+        Diagnostics: Fix broken diagnostic for Wikivoyage. See: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_6" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
@@ -845,7 +845,7 @@
     </p>
     <ul>
       <li>
-        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window" class="xowa-visited">Options/Window</a> [broken since:v2.8.5]
+        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window">Options/Window</a> [broken since:v2.8.5]
       </li>
     </ul>
     <p>
@@ -1427,7 +1427,7 @@
     </p>
     <ul>
       <li>
-        Special: Add new bookmarks page {assisted by anonymous4}. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_20" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Special: Add new bookmarks page {assisted by anonymous4}. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_20" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
     </ul>
     <p>
@@ -1477,13 +1477,13 @@
         Javascript: Upgrade jquery from 1.83 to 1.11.3 (affects nothing known); EX:/xowa/bin/any/xowa/html/res/lib/jquery/jquery-ui-1.11.3.js.
       </li>
       <li>
-        Javascript: Add jquery-ui-1.11.4.js (affects drag-and-drop to reorder bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/jquery-ui/jquery-ui-1.11.4.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_22" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Javascript: Add jquery-ui-1.11.4.js (affects drag-and-drop to reorder bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/jquery-ui/jquery-ui-1.11.4.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_22" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        Javascript: Add notifyjs-0.3.1.js (affects notification messages when adding bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/notifyjs/notifyjs-0.3.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_23" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Javascript: Add notifyjs-0.3.1.js (affects notification messages when adding bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/notifyjs/notifyjs-0.3.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_23" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        Javascript: Add dbui-0.1.1.js (affects database changes for bookmarks); EX:/xowa/bin/any/xowa/html/res/src/xowa/dbui/dbui-0.1.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Javascript: Add dbui-0.1.1.js (affects database changes for bookmarks); EX:/xowa/bin/any/xowa/html/res/src/xowa/dbui/dbui-0.1.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
         Source: Refactor Console_adp classes.
@@ -1611,7 +1611,7 @@
         Gui.Status: Default to showing full url, not shortened one; EX:"home/wiki/Main_Page" not "home/Main_Page" {detected by pirate}.
       </li>
       <li>
-        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -1639,7 +1639,7 @@
         Help: Remove "Setup ImageMagick / Inkscape" from Main_Page. See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_26" title="Main Page" class="xowa-visited">Main_Page</a>
       </li>
       <li>
-        Help: Add instructions for Maintaining wikis {detected by pirate}. See: <a href="http://xowa.org/home/wiki/App/Import/Maintenance.html" id="xolnki_27" title="App/Import/Maintenance" class="xowa-visited">App/Import/Maintenance</a>
+        Help: Add instructions for Maintaining wikis {detected by pirate}. See: <a href="http://xowa.org/home/wiki/App/Import/Maintenance.html" id="xolnki_27" title="App/Import/Maintenance">App/Import/Maintenance</a>
       </li>
     </ul>
     <p>
@@ -1876,7 +1876,7 @@
         Javascript: Highlight all words when finding text {contributed by anonymous4}. See: press Ctrl+F and type
       </li>
       <li>
-        File: Download files into *-file-user.xowa databases (no more #meta). See: <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_34" title="App/Basics/Files" class="xowa-visited">App/Basics/Files</a>
+        File: Download files into *-file-user.xowa databases (no more #meta). See: <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_34" title="App/Basics/Files">App/Basics/Files</a>
       </li>
       <li>
         File: Show File page if clicking on image without commons while online. See: <a href="https://en.wikipedia.org/wiki/File:Volcán_Chimborazo,_%22El_Taita_Chimborazo%22.jpg" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/File:Volcán_Chimborazo,_%22El_Taita_Chimborazo%22.jpg</a>
@@ -1926,7 +1926,7 @@
     </p>
     <ul>
       <li>
-        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -2067,7 +2067,7 @@
     </p>
     <ul>
       <li>
-        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window">Options/Window</a>
       </li>
       <li>
         Gui: Reduce page load errors due to popups (affects page sometimes loading incorrectly when popup is also loading); EX:hover over link and middle-click on it {detected by gnosygnu.gui}. See: <a href="https://en.wikipedia.org/wiki/Mark_Rolston" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Mark_Rolston</a> (See [[Private Mark Drake]] link)
@@ -2497,7 +2497,7 @@
         Database: Embed CSS in wiki databases.
       </li>
       <li>
-        Import: Change import script. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_49" title="Dev/Command-line" class="xowa-visited">Dev/Command-line</a>
+        Import: Change import script. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_49" title="Dev/Command-line">Dev/Command-line</a>
       </li>
     </ul>
     <p>
