--- a/home/wiki/Dashboard/Import/Offline.html
+++ b/home/wiki/Dashboard/Import/Offline.html
@@ -5,7 +5,7 @@
   <title>Dashboard/Import/Offline - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,7 +17,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.9858df96537fa95309d1c048ff91ac0a">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -977,7 +977,7 @@
           </ul>
         </li>
         <li>
-          If you want to remove a wiki, see <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_4" title="App/Import/Removal" class="xowa-visited">App/Import/Removal</a>
+          If you want to remove a wiki, see <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_4" title="App/Import/Removal">App/Import/Removal</a>
         </li>
       </ul>
     </div>
