--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -25,16 +25,16 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/All.html" id="xolnki_2" title="Diagnostics/Javascript/All" class="xowa-visited">Diagnostics/Javascript/All</a> 
+        <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/All.html" id="xolnki_2" title="Diagnostics/Javascript/All">Diagnostics/Javascript/All</a> 
         <ul>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_3" title="Diagnostics/Javascript/Table of contents" class="xowa-visited">Diagnostics/Javascript/Table_of_contents</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_3" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Redlink.html" id="xolnki_4" title="Diagnostics/Javascript/Redlink">Diagnostics/Javascript/Redlink</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_5" title="Diagnostics/Javascript/Collapsible" class="xowa-visited">Diagnostics/Javascript/Collapsible</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_5" title="Diagnostics/Javascript/Collapsible">Diagnostics/Javascript/Collapsible</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/NavFrame.html" id="xolnki_6" title="Diagnostics/Javascript/NavFrame">Diagnostics/Javascript/NavFrame</a>
@@ -46,7 +46,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Reference_tooltips.html" id="xolnki_8" title="Diagnostics/Javascript/Reference tooltips">Diagnostics/Javascript/Reference_tooltips</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_9" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a> (currently via MathJax)
+            <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_9" title="Diagnostics/Math">Diagnostics/Math</a> (currently via MathJax)
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Timeline.html" id="xolnki_10" title="Diagnostics/Javascript/Timeline">Diagnostics/Javascript/Timeline</a>
@@ -75,7 +75,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_14" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_14" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a>
       </li>
       <li>
         <a href="http://xowa.org/home/wiki/Diagnostics/JTidy.html" id="xolnki_15" title="Diagnostics/JTidy" class="xowa-visited">Diagnostics/JTidy</a>
@@ -89,7 +89,7 @@
         <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All" class="xowa-visited">Diagnostics/Scribunto/All</a> 
         <ul>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Basic.html" id="xolnki_17" title="Diagnostics/Scribunto/Basic" class="xowa-visited">Diagnostics/Scribunto/Basic</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Basic.html" id="xolnki_17" title="Diagnostics/Scribunto/Basic">Diagnostics/Scribunto/Basic</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/LuaCommon.html" id="xolnki_18" title="Diagnostics/Scribunto/LuaCommon">Diagnostics/Scribunto/LuaCommon</a>
@@ -107,7 +107,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/SiteLibrary.html" id="xolnki_22" title="Diagnostics/Scribunto/SiteLibrary">Diagnostics/Scribunto/SiteLibrary</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/TitleLibrary.html" id="xolnki_23" title="Diagnostics/Scribunto/TitleLibrary" class="xowa-visited">Diagnostics/Scribunto/TitleLibrary</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/TitleLibrary.html" id="xolnki_23" title="Diagnostics/Scribunto/TitleLibrary">Diagnostics/Scribunto/TitleLibrary</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/TextLibrary.html" id="xolnki_24" title="Diagnostics/Scribunto/TextLibrary">Diagnostics/Scribunto/TextLibrary</a>
@@ -151,7 +151,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_32" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_32" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <h2>
@@ -162,10 +162,10 @@
         <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikia/All.html" id="xolnki_33" title="Diagnostics/Xtns/Wikia/All" class="xowa-visited">Diagnostics/Xtns/Wikia/All</a> 
         <ul>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikia/NewWindowLink.html" id="xolnki_34" title="Diagnostics/Xtns/Wikia/NewWindowLink" class="xowa-visited">Diagnostics/Xtns/Wikia/NewWindowLink</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikia/NewWindowLink.html" id="xolnki_34" title="Diagnostics/Xtns/Wikia/NewWindowLink">Diagnostics/Xtns/Wikia/NewWindowLink</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikia/RandomSelection.html" id="xolnki_35" title="Diagnostics/Xtns/Wikia/RandomSelection" class="xowa-visited">Diagnostics/Xtns/Wikia/RandomSelection</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikia/RandomSelection.html" id="xolnki_35" title="Diagnostics/Xtns/Wikia/RandomSelection">Diagnostics/Xtns/Wikia/RandomSelection</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikia/Tabber.html" id="xolnki_36" title="Diagnostics/Xtns/Wikia/Tabber" class="xowa-visited">Diagnostics/Xtns/Wikia/Tabber</a>
