--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -5,13 +5,13 @@
   <title>Help/About - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.fdd6d03ce7ba69d075167c7d4f620547">
 .component_category {
   font-weight:bold;
   font-size:large;
 }
 </style>
-<style>
+<style data-id="xowa_html.fdd6d03ce7ba69d075167c7d4f620547">
 .component_category {
   font-weight:bold;
   font-size:large;
@@ -46,7 +46,7 @@
           version:
         </td>
         <td>
-          3.4.4.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
+          3.5.1.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
@@ -54,7 +54,7 @@
           build_date:
         </td>
         <td>
-          2016-04-29 22:01
+          2016-05-08 12:51
         </td>
       </tr>
       <tr>
