--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -63,7 +63,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis" class="xowa-visited">Other wikis</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
             </li>
           </ul>
         </td>
@@ -80,10 +80,10 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Main_window.html" id="xolnki_10" title="App/UI/Main window" class="xowa-visited">Using the Main Window</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Main_window.html" id="xolnki_10" title="App/UI/Main window">Using the Main Window</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_11" title="App/UI/Find box" class="xowa-visited">Finding text on a page</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_11" title="App/UI/Find box">Finding text on a page</a>
             </li>
           </ul>
         </td>
@@ -109,7 +109,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Bookmarks.html" id="xolnki_15" title="App/Bookmarks" class="xowa-visited">Bookmarks</a>
+              <a href="http://xowa.org/home/wiki/App/Bookmarks.html" id="xolnki_15" title="App/Bookmarks">Bookmarks</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Basics/Editing.html" id="xolnki_16" title="App/Basics/Editing" class="xowa-visited">Editing</a>
@@ -175,7 +175,7 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_23" title="Dev/Command-line" class="xowa-visited">Overview</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_23" title="Dev/Command-line">Overview</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_24" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
@@ -233,7 +233,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Code.html" id="xolnki_32" title="Dev/Code">Source code</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Notes.html" id="xolnki_33" title="App/Setup/Installation/Notes" class="xowa-visited">Dev environment</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Installation/Notes.html" id="xolnki_33" title="App/Setup/Installation/Notes">Dev environment</a>
             </li>
           </ul>
         </td>
@@ -291,7 +291,7 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_43" title="Help/FAQs" class="xowa-visited">FAQs</a>
+              <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_43" title="Help/FAQs">FAQs</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Help/Contributing.html" id="xolnki_44" title="Help/Contributing">Contributing</a>
@@ -310,13 +310,13 @@
               <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_46" title="Help/License/Code" class="xowa-visited">License/Code</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_47" title="Help/License/Docs" class="xowa-visited">License/Docs</a>
+              <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_47" title="Help/License/Docs">License/Docs</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Help/Privacy/Desktop.html" id="xolnki_48" title="Help/Privacy/Desktop" class="xowa-visited">Privacy</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Security.html" id="xolnki_49" title="Help/Security" class="xowa-visited">Security</a>
+              <a href="http://xowa.org/home/wiki/Help/Security.html" id="xolnki_49" title="Help/Security">Security</a>
             </li>
           </ul>
         </td>
@@ -357,10 +357,10 @@
               <a href="http://xowa.org/home/wiki/Dev/Environment/Text_editor.html" id="xolnki_54" title="Dev/Environment/Text editor">Dev/Environment/Text editor</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_55" title="App/UI/Find box" class="xowa-visited">App/UI/Find box</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_55" title="App/UI/Find box">App/UI/Find box</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_56" title="App/Import/Removal" class="xowa-visited">Removal</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_56" title="App/Import/Removal">Removal</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_57" title="App/Import/Offline">Import/Using_data_dump_files</a>
@@ -375,7 +375,7 @@
               <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons.html" id="xolnki_60" title="App/Wiki types/Commons">Wikis/Commons</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_61" title="App/Basics/Files" class="xowa-visited">Files</a>
+              <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_61" title="App/Basics/Files">Files</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Android.html" id="xolnki_62" title="App/Xtn/Android" class="xowa-visited">Android/Alpha</a>
@@ -393,7 +393,7 @@
               <a href="http://xowa.org/home/wiki/App/UI/Printing.html" id="xolnki_66" title="App/UI/Printing">Printing</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Download/Aria2.html" id="xolnki_67" title="App/Import/Download/Aria2" class="xowa-visited">Aria2</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Download/Aria2.html" id="xolnki_67" title="App/Import/Download/Aria2">Aria2</a>
             </li>
           </ul>
         </td>
