--- a/home/wiki/Help/Overview.html
+++ b/home/wiki/Help/Overview.html
@@ -109,7 +109,7 @@
       XOWA is free software. The code is open source under the AGPLv3 license, and available to anyone for review or modification. See <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_4" title="Help/License/Code" class="xowa-visited">Help/License/Code</a> for more information as well as <a href="https://github.com/gnosygnu/xowa" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa</a>.
     </p>
     <p>
-      XOWA advocates free content. All documentation and project artifacts are provided under the Creative Commons CC BY-NC-SA license. See <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_5" title="Help/License/Docs" class="xowa-visited">Help/License/Docs</a> for more information.
+      XOWA advocates free content. All documentation and project artifacts are provided under the Creative Commons CC BY-NC-SA license. See <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_5" title="Help/License/Docs">Help/License/Docs</a> for more information.
     </p>
     <p>
       XOWA values user privacy. It will never collect and upload personal information. It is designed to be run in a standalone environment, without any connection to the internet. See <a href="http://xowa.org/home/wiki/Help/Privacy/Desktop.html" id="xolnki_6" title="Help/Privacy/Desktop" class="xowa-visited">Help/Privacy/Desktop</a> for more information.
