--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -193,7 +193,7 @@
         v2.8.1 has a language converter dropdown for the Chinese wikis.
       </li>
       <li>
-        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_14" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_14" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
         v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_15" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_16" title="App/UI/HTML Browser">HTML Browser</a>
@@ -209,7 +209,7 @@
     </dl>
     <ul>
       <li>
-        v2.5.4 has changed online file downloads. Among other things, ImageMagick and Inkscape are no longer required. For more info, see <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_18" title="App/Basics/Files" class="xowa-visited">Files</a>
+        v2.5.4 has changed online file downloads. Among other things, ImageMagick and Inkscape are no longer required. For more info, see <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_18" title="App/Basics/Files">Files</a>
       </li>
       <li>
         v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_19" title="App/Search" class="xowa-visited">App/Search</a>
@@ -235,12 +235,12 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_21" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_22" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_21" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_22" title="Options/HTML" class="xowa-visited">Options/HTML</a>
           </li>
         </ul>
       </li>
       <li>
-        <b>Find box</b>: Press Ctrl+F on your keyboard. This will show the Find box (in the lower left-hand corner). Type "tips". Notice that the word "Tips" is highlighted above. Note that Alt+P (Previous) and Alt+N (Next) will change search direction. See <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_23" title="App/UI/Find box" class="xowa-visited">Find Box</a> for more info.
+        <b>Find box</b>: Press Ctrl+F on your keyboard. This will show the Find box (in the lower left-hand corner). Type "tips". Notice that the word "Tips" is highlighted above. Note that Alt+P (Previous) and Alt+N (Next) will change search direction. See <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_23" title="App/UI/Find box">Find Box</a> for more info.
       </li>
       <li>
         <b>Address bar</b>: Press Alt+D or Ctrl+L on your keyboard. This will take you to the Address bar at the top of the screen. Type "s.w:Earth" (no quotes) and press Enter. This will open the Simple Wikipedia page for Earth. See <a href="http://xowa.org/home/wiki/App/UI/Address_bar/Shortcuts.html#Default_shortcuts" id="xolnki_24" title="App/UI/Address bar/Shortcuts">Address bar/Shortcuts</a> for more shortcuts.
@@ -323,7 +323,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_32" title="Help/FAQs" class="xowa-visited">FAQs</a>
+          <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_32" title="Help/FAQs">FAQs</a>
         </td>
         <td>
           View questions asked by other users
