--- a/home/wiki/Options/HTML_Tidy.html
+++ b/home/wiki/Options/HTML_Tidy.html
@@ -5,7 +5,7 @@
   <title>Options/HTML Tidy - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,7 +17,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -108,7 +108,7 @@ li.active a, li.active a:hover
     min-height: 300px;
 }
 </style>
-<style>
+<style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -120,7 +120,7 @@ li.active a, li.active a:hover
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -293,7 +293,7 @@ li.active a, li.active a:hover
         </div><br>
          
         <p>
-          HTML Tidy is a software library whose purpose is to fix invalid HTML. It is enabled on all Wikimedia wikis. Without HTML Tidy, a small percentage of pages will render incorrectly (broken tables; extended bold; horizontal scroll bar; misplaced images), etc. See <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_2" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a> for examples.
+          HTML Tidy is a software library whose purpose is to fix invalid HTML. It is enabled on all Wikimedia wikis. Without HTML Tidy, a small percentage of pages will render incorrectly (broken tables; extended bold; horizontal scroll bar; misplaced images), etc. See <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_2" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a> for examples.
         </p>
         <p>
           For more info about XOWA's customized JTidy jar, see <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Tidy/JTidy.html" id="xolnki_3" title="App/Xtn/Mediawiki/Tidy/JTidy">App/Xtn/Mediawiki/Tidy/JTidy</a>
