--- a/home/wiki/Options/Math.html
+++ b/home/wiki/Options/Math.html
@@ -5,7 +5,7 @@
   <title>Options/Math - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,7 +17,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -108,7 +108,7 @@ li.active a, li.active a:hover
     min-height: 300px;
 }
 </style>
-<style>
+<style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -120,7 +120,7 @@ li.active a, li.active a:hover
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -364,7 +364,7 @@ li.active a, li.active a:hover
                 <span class="reference-text"><b>MathJax</b>: use MathJax for &lt;math&gt;. Note that this is faster, does not use any disk space, and requires no additional setup</span>
               </li>
               <li>
-                <span class="reference-text"><b>LaTeX</b>: use LaT<sub>E</sub>X for &lt;math&gt;. Note that LaT<sub>E</sub>X is slower and will use extra disk space. It <b>must</b> also be installed. See <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/Setup.html" id="xolnki_2" title="App/Xtn/Mediawiki/Math/Setup" class="xowa-visited">App/Xtn/Mediawiki/Math/Setup</a></span>
+                <span class="reference-text"><b>LaTeX</b>: use LaT<sub>E</sub>X for &lt;math&gt;. Note that LaT<sub>E</sub>X is slower and will use extra disk space. It <b>must</b> also be installed. See <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/Setup.html" id="xolnki_2" title="App/Xtn/Mediawiki/Math/Setup">App/Xtn/Mediawiki/Math/Setup</a></span>
               </li>
             </ul>
           </li>
