--- a/home/wiki/Options/Score.html
+++ b/home/wiki/Options/Score.html
@@ -5,7 +5,7 @@
   <title>Options/Score - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style>
+  <style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -17,7 +17,7 @@
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -108,7 +108,7 @@ li.active a, li.active a:hover
     min-height: 300px;
 }
 </style>
-<style>
+<style data-id="xowa_html.46c4013ddf8dccc9dfc4f9337abd9d22">
 .options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
@@ -120,7 +120,7 @@ li.active a, li.active a:hover
   .options_checkbox    {padding: 2px; border: 1px solid black;}
   .options_readonly    {background-color:#F9F9F9;}
 </style>
-<style>
+<style data-id="xowa_html.f3a51b13744b2f58df519f77fc3b2725">
 .optionsButton
 {
     width: 100px;
@@ -303,7 +303,7 @@ li.active a, li.active a:hover
                 <span class="mbox-text-span">ImageMagick must be set up in order for Score to work correctly.</span>
               </p>
               <p>
-                <span class="mbox-text-span">See the following pages: <a href="http://xowa.org/home/wiki/Dev/File/Setup/Windows.html" id="xolnki_2" title="Dev/File/Setup/Windows" class="xowa-visited">Dev/File/Setup/Windows</a>, <a href="http://xowa.org/home/wiki/Dev/File/Setup/Linux.html" id="xolnki_3" title="Dev/File/Setup/Linux" class="xowa-visited">Dev/File/Setup/Linux</a>, <a href="http://xowa.org/home/wiki/Dev/File/Setup/Mac_OS_X.html" id="xolnki_4" title="Dev/File/Setup/Mac OS X">Dev/File/Setup/Mac OS X</a></span>
+                <span class="mbox-text-span">See the following pages: <a href="http://xowa.org/home/wiki/Dev/File/Setup/Windows.html" id="xolnki_2" title="Dev/File/Setup/Windows">Dev/File/Setup/Windows</a>, <a href="http://xowa.org/home/wiki/Dev/File/Setup/Linux.html" id="xolnki_3" title="Dev/File/Setup/Linux">Dev/File/Setup/Linux</a>, <a href="http://xowa.org/home/wiki/Dev/File/Setup/Mac_OS_X.html" id="xolnki_4" title="Dev/File/Setup/Mac OS X">Dev/File/Setup/Mac OS X</a></span>
               </p>
             </td>
           </tr>
