--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -994,10 +994,10 @@
           simple.wikipedia.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-03-05
         </td>
         <td class='cell_center'>
           2016-03-05
@@ -1006,13 +1006,13 @@
           Dump in progress
         </td>
         <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
+          sqlite3
         </td>
         <td class='cell_center'>
           v2
+        </td>
+        <td class='cell_center'>
+          v1
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple.wikipedia.org")'>Import</button>
