--- a/home/wiki/Dev/Command-line/Dumps.html
+++ b/home/wiki/Dev/Command-line/Dumps.html
@@ -183,7 +183,7 @@
         Memory: 16 GB DDR3 SDRAM DDR3 1600 (PC3 12800)
       </li>
       <li>
-        Hard Drive: 1TB 10,000 RPM 64MB Cache SATA 6.0Gb/s
+        Hard Drive: 1TB SSD
       </li>
       <li>
         Operating System: openSUSE 13.2
