--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -235,7 +235,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_21" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_22" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_21" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_22" title="Options/HTML" class="xowa-visited">Options/HTML</a>
           </li>
         </ul>
       </li>
