--- a/home/wiki/App/Xtn/Android.html
+++ b/home/wiki/App/Xtn/Android.html
@@ -31,6 +31,17 @@
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
+    <table class="metadata plainlinks ambox ambox-delete" style="">
+      <tr>
+        <td class="mbox-empty-cell">
+        </td>
+        <td class="mbox-text" style="">
+          <p>
+            <span class="mbox-text-span">Note: This page is obsolete. It is preserved for historical reference only.</span>
+          </p>
+        </td>
+      </tr>
+    </table>
     <p>
       XOWA is also available as an Android application.
     </p>
