--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -706,7 +706,7 @@
     </p>
     <ul>
       <li>
-        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a>
+        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images" class="xowa-visited">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a>
       </li>
     </ul>
     <p>
