--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -357,8 +357,8 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 48.343 MB
-file count: 3026
+space used: 95.678 MB
+file count: 6460
 oldest file: 2016-03-31 20:42:31
 </textarea>
             </td>
@@ -439,7 +439,7 @@ oldest file: 2016-03-31 20:42:31
                     <span class="reference-text">ImageMagick and Inkscape <b>must</b> be installed (See <a href="http://xowa.org/home/wiki/Dev/File/Setup.html" id="xolnki_2" title="Dev/File/Setup">Dev/File/Setup</a>)</span>
                   </li>
                   <li>
-                    <span class="reference-text">An internet connection must be available, or a local tarball must be set up. (See <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_3" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a>)</span>
+                    <span class="reference-text">An internet connection must be available, or a local tarball must be set up. (See <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_3" title="Archive/Usage/Offline images" class="xowa-visited">Archive/Usage/Offline_images</a>)</span>
                   </li>
                 </ul>
               </li>
