--- a/home/wiki/Android/Setup.html
+++ b/home/wiki/Android/Setup.html
@@ -343,17 +343,17 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://en.wikipedia.org" rel="nofollow" class="external free">https://en.wikipedia.org</a>
+            <a href="https://en.wikipedia.org" rel="nofollow" class="external free">https://en.wikipedia.org</a> (Android)
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2016-03-05
+            2016-05-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2016-03-20
+            2016-05-24
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
@@ -368,14 +368,13 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_wiki_core.7z" rel="nofollow" class="external text">html.core</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_file-stubs.7z" rel="nofollow" class="external text">html.file stubs</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_ns-000_part-1.7z" rel="nofollow" class="external text">html.main articles.part-1</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_ns-000_part-2.7z" rel="nofollow" class="external text">html.main articles.part-2</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_ns-000_part-3.7z" rel="nofollow" class="external text">html.main articles.part-3</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_ns-004.7z" rel="nofollow" class="external text">html.project articles</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_ns-014.7z" rel="nofollow" class="external text">html.category articles</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-03-05_html_ns-100.7z" rel="nofollow" class="external text">html.portal articles</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-05-01_html_core.7z" rel="nofollow" class="external text">html.core</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-05-01_html_ns-000_part-1.7z" rel="nofollow" class="external text">html.main articles.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-05-01_html_ns-000_part-2.7z" rel="nofollow" class="external text">html.main articles.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-05-01_html_ns-000_part-3.7z" rel="nofollow" class="external text">html.main articles.part-3</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-05-01_html_ns-004.7z" rel="nofollow" class="external text">html.project articles</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-05-01_html_ns-014.7z" rel="nofollow" class="external text">html.category articles</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-05-01_html_ns-100.7z" rel="nofollow" class="external text">html.portal articles</a><br>
           </p>
         </td>
       </tr>
