--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -123,7 +123,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2016-05-01
         </td>
         <td class='cell_center'>
           2016-03-05
@@ -991,13 +991,47 @@
       </tr>
       <tr>
         <td>
+          simple.wikipedia.org.merge
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-05-01
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple.wikipedia.org.merge")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("simple.wikipedia.org.merge")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia.org.merge")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           simple.wikipedia.org
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2016-05-01
         </td>
         <td class='cell_center'>
           2016-03-05
@@ -1172,7 +1206,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-04-07
+          2016-05-01
         </td>
         <td class='cell_center'>
           2016-03-05
